--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta name="description" content="Webpage description goes here" />
+  <meta charset="utf-8">
+  <title>Change_me</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+</head>
+
 <body>
-<div class=”entry-meta”><a class=”entry-date published”>December 7, 2016</a></div>
-testtest
+  <div class=”entry-meta”><a class=”entry-date published”>December 7, 2016</a></div>
+
+<div class="container">
+  testtest
+</div>
+
+<script>
+</script>
+
 </body>
+</html>
